--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=4"
   },
   "scripts": {
-    "test": "xo && ava",
+    "test": "xo",
     "postinstall": "alfy-init",
     "preuninstall": "alfy-cleanup"
   },
@@ -30,8 +30,6 @@
     "alfy": "^0.6.0"
   },
   "devDependencies": {
-    "alfy-test": "^0.3.0",
-    "ava": "^0.15.2",
     "xo": "^0.16.0"
   },
   "xo": {
