--- a/info.plist
+++ b/info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>name</key>
-	<string>sl</string>
 	<key>bundleid</key>
 	<string>se.antonniklasson.alfred-sl</string>
 	<key>category</key>
@@ -26,6 +24,8 @@
 	</dict>
 	<key>disabled</key>
 	<false/>
+	<key>name</key>
+	<string>sl</string>
 	<key>objects</key>
 	<array>
 		<dict>
@@ -44,8 +44,6 @@
 			<string>alfred.workflow.action.openurl</string>
 			<key>uid</key>
 			<string>41BDDD3E-DA8F-408D-8BBE-8EA1C96AFD8C</string>
-			<key>version</key>
-			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -77,7 +75,7 @@
 				<key>subtext</key>
 				<string></string>
 				<key>title</key>
-				<string>SL information right there in Alfed.</string>
+				<string>SL real-time information.</string>
 				<key>type</key>
 				<integer>0</integer>
 				<key>withspace</key>
@@ -95,17 +93,17 @@
 	<string></string>
 	<key>uidata</key>
 	<dict>
-		<key>41BDDD3E-DA8F-408D-8BBE-8EA1C96AFD8C</key>
-		<dict>
-			<key>xpos</key>
-			<integer>150</integer>
-			<key>ypos</key>
-			<integer>10</integer>
-		</dict>
 		<key>1C861BA5-04F0-4501-AD5F-D039F4B35697</key>
 		<dict>
 			<key>xpos</key>
 			<integer>10</integer>
+			<key>ypos</key>
+			<integer>10</integer>
+		</dict>
+		<key>41BDDD3E-DA8F-408D-8BBE-8EA1C96AFD8C</key>
+		<dict>
+			<key>xpos</key>
+			<integer>150</integer>
 			<key>ypos</key>
 			<integer>10</integer>
 		</dict>
